удален ненужный файл

--- a/myForm/form.html
+++ b/myForm/form.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div class="container">
-    <form action="./form1.php" method="GET" id="myForm">
+    <form action="./dataparser.php" method="GET" id="myForm">
         <select id="list1" class="list">
             <option>1</option>
             <option>2</option>
